# bankiru-reviews-database-api

./: .gitignore  README.md  database.py  logfire_auto_tracing.py  main.py  models.py  pyproject.toml  schemas.py  settings.py  tools.py  uploaders.py
stuff/demo/: 113f07db-c25e-4c71-a505-04bfa0f2aaee.xlsx  7dcda17e-a880-4e24-85a4-b88cdf9cdafe.json  96b5e82a-e58f-4629-8ad1-ce6ab5e9e720.csv
stuff/gab/: BankiruFrontendAgent.txt  filter_reviews.txt  info.txt  prompt.txt  select_distinct_values.txt  utc_plus_minus_delta.txt
stuff/vm/: database-api.service  systemd_unit.txt
